Внесены грамматические правки

--- a/src/aromo_formula.html
+++ b/src/aromo_formula.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('html/head.html', { "title":"Аромоформула | Практикующий психолог Ирина Дзюбенко" })
+  @@include('html/head.html', { "title":"Аромаформула | Практикующий психолог Ирина Дзюбенко" })
 
   <body>
     <div class="wrapper">
@@ -57,7 +57,7 @@
               <img src="./img/formula/formula_01.png" alt="Картинка эфирного масла" />
             </div>
             <div class="reasons-formula__title">
-              <h2>Когда стоит пройти аромотестирование?</h2>
+              <h2>Когда стоит пройти ароматестирование?</h2>
             </div>
           </div>
           <div class="reasons-formula__container">
@@ -97,7 +97,7 @@
                 </div>
                 <div class="consultation-formula__card">
                   <div class="consultation-formula__text">
-                    <p>Консультация по аромо-тестированию</p>
+                    <p>Консультация по ароматестированию</p>
                     <p>Длительность 1.5 часа</p>
                     <p>Стоимость 2 500 рублей</p>
                   </div>
