--- a/src/aromo_oils.html
+++ b/src/aromo_oils.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('html/head.html', { "title":"Аромомасла | Практикующий психолог Ирина Дзюбенко" })
+  @@include('html/head.html', { "title":"Аромамасла | Практикующий психолог Ирина Дзюбенко" })
 
   <body>
     <div class="wrapper">
