--- a/src/html/head.html
+++ b/src/html/head.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Cache-Control" content="no-cache" />
   <!--metatextblock-->
   <meta name="description" content="Практикующий психолог, ольфактотерапевт, ароматолог, провожу консультации онлайн, дам рекомендации по эфирным маслам, подберу личную аромоформулу" />
-  <meta name="keywords" content="опытный психолог, психологическая помощь, ароматерапевт,  консультация психолога онлайн, эфирные  масла" />
+  <meta name="keywords" content="опытный психолог, психологическая помощь, ароматерапевт,  консультация психолога онлайн, эфирные  масла, аромамасла" />
   <link rel="canonical" href="https://psy-ivd.ru" />
   <meta name="Author" content="dav-studio" />
   <meta name="Copyright" content="Дзюбенко Ирина" />
@@ -16,12 +16,3 @@
   <link rel="stylesheet" href="css/style.min.css" />
   <title>@@title</title>
 </head>
-
-
-
-<!-- 
-  <link rel="shortcut icon" href="/img/favicon_.ico" /> 
--->
-<!--
-<meta name="format-detection" content="telephone=no" /> 
--->
