--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__container">
     <div class="header__top">
-      <h1 class="header__title">Консультации психолога онлайн, аромотерапия и психологическая помощь</h1>
+      <h1 class="header__title">Консультации психолога онлайн, ароматерапия и психологическая помощь</h1>
 
       <div class="header__social social-icon">
         <a href="https://vk.com/dzyubenko53" class="social-icon__link" target="_blank"><img src="@img/header/vk.svg" alt="vk-icon" /></a>
@@ -17,8 +17,8 @@
           <ul class="menu__list">
             <li class="menu__item"><a href="/" class="menu__link">Главная</a></li>
             <li class="menu__item"><a href="../about.html" title="about" class="menu__link">Обо мне</a></li>
-            <li class="menu__item"><a href="../aromo_oils.html" class="menu__link">Аромомасла</a></li>
-            <li class="menu__item"><a href="../aromo_formula.html" class="menu__link">Аромоформула</a></li>
+            <li class="menu__item"><a href="../aromo_oils.html" class="menu__link">Аромамасла</a></li>
+            <li class="menu__item"><a href="../aromo_formula.html" class="menu__link">Аромаформула</a></li>
           </ul>
         </nav>
       </div>
