--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="introduce-main__action">
               <div class="introduce-main__media">
-                <div class="introduce-main__photo"><img src="./img/main/general_photo.jpg" alt="Фотография аромотолога" /></div>
+                <div class="introduce-main__photo"><img src="./img/main/general_photo.jpg" alt="Фотография ароматолога" /></div>
                 <div class="introduce-main__call">
                   <a class="introduce-main__link" href="./about.html" target="_blank"
                     >Подробнее узнать обо мне, вы можете <br />
@@ -45,21 +45,21 @@
                   <div class="aromo-oil-main__card">
                     <div class="aromo-oil-main__text text-aromo-oil">
                       <p class="text-aromo-oil__top">
-                        У аромо-масел богатая история, которую можно рассказывать долго и очень увлекательно. <span>Подробно обо всех маслах можно узнать <a href="./aromo_oils.html" target="_blank">здесь</a></span>
+                        У аромамасел богатая история, которую можно рассказывать долго и очень увлекательно. <span>Подробно обо всех маслах можно узнать <a href="./aromo_oils.html" target="_blank">здесь</a></span>
                       </p>
                     </div>
                     <div class="aromo-oil-main__image">
-                      <img src="./img/main/oil_01.png" alt="Картинка аромомасла" />
+                      <img src="./img/main/oil_01.png" alt="Картинка аромамасла" />
                     </div>
                   </div>
                   <div class="aromo-oil-main__card">
                     <div class="aromo-oil-main__image aromo-oil-main__image-order">
-                      <img src="./img/main/oil_02.png" alt="Картинка аромомасла" />
+                      <img src="./img/main/oil_02.png" alt="Картинка аромамасла" />
                     </div>
                     <div class="aromo-oil-main__text">
                       <p class="text-aromo-oil__bottom">
-                        Один из самых частых вопросов об аромо-маслах звучит так: для чего использовать аромо-масла? <br />
-                        Если говорить коротко, то аромомасла при использовании позволяют дышать жизнью полной грудью, лететь и наслаждаться, расправив крылья, вдохновляться и любить, меняя реальность
+                        Один из самых частых вопросов об аромамаслах звучит так: для чего использовать аромамасла? <br />
+                        Если говорить коротко, то аромамасла при использовании позволяют дышать жизнью полной грудью, лететь и наслаждаться, расправив крылья, вдохновляться и любить, меняя реальность
                         по своему усмотрению!
                       </p>
                     </div>
@@ -69,7 +69,7 @@
                   <p>На другие частые вопросы вы найдете ответы <a href="./aromo_oils.html" target="_blank">в специальном разделе</a></p>
                 </div>
               </div>
-              <h3 class="aromo-oil-main__title">А также вы можете получить консультацю об аромомаслах от мастера с 10-ти летним опытом</h3>
+              <h3 class="aromo-oil-main__title">А также вы можете получить консультацю об аромамаслах от мастера с 10-ти летним опытом</h3>
             </div>
           </div>
         </section>
@@ -77,22 +77,22 @@
         <section class="page-main__formula formula-main">
           <div class="formula-main__preview preview-formula">
             <div class="preview-formula__container">
-              <p>Взять любое аромомасло и использовать, звучит просто, но это не всё что можно сделать.</p>
+              <p>Взять любое аромамасло и использовать, звучит просто, но это не всё что можно сделать.</p>
             </div>
           </div>
           <div class="formula-main__container">
             <div class="formula-main__title">
-              <h3>Отдельное место в аромотерапии занимает аромодиагностика и создание своей уникальной <b>аромоформулы.</b></h3>
+              <h3>Отдельное место в ароматерапии занимает аромадиагностика и создание своей уникальной <b>аромаформулы.</b></h3>
             </div>
             <div class="formula-main__inner">
               <div class="formula-main__cards">
-                <div class="formula-main__card"><p>Что такое аромоформула?</p></div>
+                <div class="formula-main__card"><p>Что такое аромаформула?</p></div>
                 <div class="formula-main__card formula-main__card_offset-1"><p>Как её создать? Как использовать?</p></div>
-                <div class="formula-main__card formula-main__card_offset-2"><p>Мне подойдет аромоформула другого человека?</p></div>
+                <div class="formula-main__card formula-main__card_offset-2"><p>Мне подойдет аромаформула другого человека?</p></div>
               </div>
             </div>
             <div class="formula-main__link">
-              <a href="./aromo_formula.html" target="_blank">На эти вопросы я отвечу вам подробно на странице <b>“Моя аромоформула”</b></a>
+              <a href="./aromo_formula.html" target="_blank">На эти вопросы я отвечу вам подробно на странице <b>“Моя аромаформула”</b></a>
             </div>
           </div>
         </section>
