--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,7 @@
           <div class="introduce-about__container">
             <div class="introduce-about__action">
               <div class="introduce-about__media">
-                <div class="introduce-about__photo"><img src="./img/about/general_photo.jpg" alt="Фотография аромотолога" /></div>
+                <div class="introduce-about__photo"><img src="./img/about/general_photo.jpg" alt="Фотография ароматолога" /></div>
               </div>
             </div>
             <div class="introduce-about__title">
@@ -68,7 +68,7 @@
             <div class="consultation-about__university">
               <p>
                 После выхода на пенсию мое увлечение эфирными маслами привело к обучению в Университете Практической Психологии, познанию профессиональной аромапсихологии, ароматерапии и получению
-                специальности арома-консультанта по созданию Аромаформулы.
+                специальности аромаконсультанта по созданию Аромаформулы.
               </p>
             </div>
             <div class="consultation-about__content">
@@ -85,7 +85,7 @@
                 </div>
                 <div class="consultation-about__card">
                   <div class="consultation-about__text">
-                    <p>Консультация по аромо-тестированию</p>
+                    <p>Консультация по ароматестированию</p>
                     <p>Длительность 1.5 часа</p>
                     <p>Стоимость 2 500 рублей</p>
                   </div>
@@ -149,10 +149,10 @@
           <div class="psychology-about__container">
             <div class="psychology-about__diplom diplom-about-mirrored">
               <div class="diplom-about-mirrored__description">
-                <p>Диплом аромотерапевта получен в 2022 году в школе Г.Сахаровой</p>
+                <p>Диплом ароматерапевта получен в 2022 году в школе Г.Сахаровой</p>
               </div>
               <div class="diplom-about-mirrored__image">
-                <img src="./img/about/aromo_slider/main_diplom.jpg" alt="диплом консультанта аромотерапевта" />
+                <img src="./img/about/aromo_slider/main_diplom.jpg" alt="диплом консультанта ароматерапевта" />
               </div>
             </div>
           </div>
@@ -160,7 +160,7 @@
         <section class="page-about__certifications certifications">
           <div class="certifications__container">
             <div class="certifications__title">
-              <h4>Сертификаты аромомастера</h4>
+              <h4>Сертификаты аромамастера</h4>
             </div>
             <div class="certifications__slider swiper">
               <div class="certifications__wrapper swiper-wrapper">
@@ -196,8 +196,3 @@
   </body>
 </html>
 
-<!-- 
- <button type="button" class="certifications__arrow certifications__arrow-prev"><img src="./img/about/arrow_prev.svg" alt="стрелка назад" /></button>
-          <button type="button" class="certifications__arrow certifications__arrow-next"><img src="./img/about/arrow_next.svg" alt="стрелка вперед" /></button>
-
- -->
