Добавлена ссылка на сайт

--- a/src/about.html
+++ b/src/about.html
@@ -182,6 +182,9 @@
                 <div class="certifications__slide swiper-slide">
                   <img src="./img/about/aromo_slider/sert_02.png" alt="сертификат психолога" />
                 </div>
+                <div class="certifications__slide swiper-slide">
+                  <img src="./img/about/aromo_slider/sert_05.png" alt="сертификат психолога" />
+                </div>
               </div>
               <div class="certifications__dots"></div>
             </div>
